--- a/Start with Nothing/Assembly-CSharp.csproj
+++ b/Start with Nothing/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Audio.cs" />
     <Compile Include="Assets\Scripts\CharacterController2D.cs" />
     <Compile Include="Assets\Scripts\EyesLegs.cs" />
     <Compile Include="Assets\Scripts\Gem.cs" />
